# arc

./: .gitignore  README.md  pyproject.toml  setup.py
arc/: __init__.py
arc-framework/: setup.py
arc-framework/src/benchmarks/: __init__.py  arc_1d.py  arc_agi.py  custom_benchmark.py
arc-framework/src/core/: __init__.py  grid.py
arc-framework/src/datasets/: downloader.py  loaders.py
arc-framework/src/models/: base_model.py  transformer_model.py
arc-framework/tests/: test_benchmarks.py  test_core.py
arc/benchmarks/: custom_benchmark.py
arc/core/: evaluation.py
arc/datasets/: registry.py
arc/models/: base_model.py  simple_model.py  transformer_model.py
arc/utils/: data_loader.py  visualization.py
data/: README.md
examples/: external_usage.py
src/: api.py  basic_usage.py
src/benchmarks/: arc_agi2.py
src/core/: evaluation.py  task.py
src/models/: simple_model.py
src/utils/: visualization.py
tests/: test_benchmarks.py  test_core.py  test_utils.py
