[tool.poetry]
name = "arc-framework"
version = "0.1.0"
description = "A framework to deal with various ARC challenges by Chollet."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21"
pandas = "^1.3"
matplotlib = "^3.4"
scikit-learn = "^0.24"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"