[build-system]
requires = ["setuptools>=68.2.2", "wheel>=0.41.3"]
build-backend = "setuptools.build_meta"

[project]
name = "arc"
version = "0.1.0"
description = "Framework for working with the Abstract Reasoning Corpus (ARC)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "ARC Framework Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.1",
    "matplotlib>=3.8.3",
    "scikit-learn>=1.4.1.post1",
    "tensorflow>=2.16.1",
    "torch>=2.2.1",
    "jupyter>=1.0.0",
    "tqdm>=4.66.2",
    "pillow>=10.2.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.2",
    "pytest-cov>=4.1.0",
    "black>=24.1.1",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]

[project.urls]
"Homepage" = "https://github.com/R1704/arc"
"Bug Tracker" = "https://github.com/R1704/arc/issues"

[tool.setuptools]
packages = ["arc", "arc.datasets", "arc.core", "arc.models", "arc.utils", "arc.benchmarks"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"